@@ -8,6 +8,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 3.3.4.0 (not yet released)
 - bug #2996161 [import] properly escape import value
 - bug #2998889 [import] Import button does not work in Catalan
+- [browse] Fix handling of sort order if only column is specified.
 
 3.3.3.0 (2010-05-10)
 - patch #2982480 [navi] Do not group if there would be one table in group,
